src/tests/snapshots/silkgen__tests__basic-invert.snap
---
source: src/tests/mod.rs
expression: "run_against(stringify!(basic), include_bytes!(\"basic.png\"), true)"
---
(footprint "basic"
(version 20220630)
(generator "silkgen x.x.x")
(layer F.SilkS)
(tedit 0)
(attr board_only exclude_from_pos_files exclude_from_bom)
(fp_text reference "G***" (at 0 0) (layer F.Fab)
(effects (font (size 1.524 1.524) (thickness 0.3)))
(tstamp e5476862-c780-4858-ad23-2141b5d696cd)
)
(fp_text value "LOGO" (at 0.75 0) (layer F.Fab) hide
(effects (font (size 1.524 1.524) (thickness 0.3)))
(tstamp a4a732fb-002e-4bad-81b3-f6d61c96ff7a)
)
(fp_poly (pts (xy -1 -1)
(xy 0 -1)
(xy 0 0)
(xy -1 0)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 741664a6-905c-4d5c-a79e-8e52204f1418)
)
(fp_poly (pts (xy -1 -1)
(xy 0 -1)
(xy 0 0)
(xy -1 0)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp c33cf42c-49e6-47cd-93df-e401476290f2)
)
(fp_poly (pts (xy 0.1 -1)
(xy 1 -1)
(xy 1 -0.1)
(xy 0.1 -0.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 8afb8d00-9aa8-44b0-b3a6-0c1a3fa9f6b6)
)
(fp_poly (pts (xy -1 0.1)
(xy -0.1 0.1)
(xy -0.1 1)
(xy -1 1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 5d6a07d0-0b11-466a-bb5c-9b52677c09ec)
)
(fp_poly (pts (xy 0 0)
(xy 1 0)
(xy 1 1)
(xy 0 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 2396ee4e-bd78-49a4-b892-c8076780e9ac)
)
(fp_poly (pts (xy 0 0)
(xy 1 0)
(xy 1 1)
(xy 0 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp e131e9b7-4577-43da-b67b-6648899e87e2)
)
)

