src/tests/snapshots/silkgen__tests__basic.snap
---
source: src/tests/mod.rs
expression: "run_against(include_bytes!(\"basic.png\"))"
---
(footprint "testname"
(version 20220630)
(generator silkgen)
(layer F.Silkscreen)
(tedit 0)
(attr board_only exclude_from_pos_files exclude_from_bom)
(fp_text reference "G***" (at 0 0) (layer F.Fab)
(effects (font (size 1.524 1.524) (thickness 0.3)))
(tstamp c45669fa-23d3-4b15-a7c8-d69b555815e1)
)
(fp_text value "LOGO" (at 0.75 0) (layer F.Fab) hide
(effects (font (size 1.524 1.524) (thickness 0.3)))
(tstamp e8692f66-44d9-4022-bcff-21cb4616bb87)
)
(fp_poly (pts (xy -1 -1)
(xy -0.1 -1)
(xy -0.1 -0.1)
(xy -1 -0.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 082a15f5-203b-440c-9ef1-b46049776530)
)
(fp_poly (pts (xy 0 -1)
(xy 1 -1)
(xy 1 0)
(xy 0 0)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp df5ea2bf-9422-42e0-b8be-9882e9db0a75)
)
(fp_poly (pts (xy 0 -1)
(xy 1 -1)
(xy 1 0)
(xy 0 0)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 40233e12-fc59-4519-9f01-16e978915da5)
)
(fp_poly (pts (xy -1 0)
(xy 0 0)
(xy 0 1)
(xy -1 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp eab1ba90-f6ba-4511-8675-00d9416b041a)
)
(fp_poly (pts (xy -1 0)
(xy 0 0)
(xy 0 1)
(xy -1 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp be8de91f-f686-460f-9f5e-5162fe705b44)
)
(fp_poly (pts (xy 0.1 0.1)
(xy 1 0.1)
(xy 1 1)
(xy 0.1 1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp d33b933a-5654-44bf-bc1b-3deeb6a7a900)
)
)

