src/tests/snapshots/silkgen__tests__clearance-invert.snap
---
source: src/tests/mod.rs
expression: "run_against(stringify!(clearance), include_bytes!(\"clearance.png\"), true)"
---
(footprint "clearance"
(version 20220630)
(generator "silkgen x.x.x")
(layer F.SilkS)
(tedit 0)
(attr board_only exclude_from_pos_files exclude_from_bom)
(fp_text reference "G***" (at 0 0) (layer F.Fab)
(effects (font (size 1.524 1.524) (thickness 0.3)))
(tstamp 98b43658-8d3d-4656-8f86-4faef3e0a688)
)
(fp_text value "LOGO" (at 0.75 0) (layer F.Fab) hide
(effects (font (size 1.524 1.524) (thickness 0.3)))
(tstamp b67d1f63-6c42-4a22-836d-9db4f99eef3c)
)
(fp_poly (pts (xy -6 -6)
(xy -5 -6)
(xy -5 -5)
(xy -6 -5)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp eb3df6c0-d8a9-48e6-b108-a12d43aa14a4)
)
(fp_poly (pts (xy -6 -6)
(xy -5 -6)
(xy -5 -5)
(xy -6 -5)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 327801b1-f487-4790-bac6-d756877c8395)
)
(fp_poly (pts (xy -5 -6)
(xy -4 -6)
(xy -4 -5)
(xy -5 -5)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 8016e7e1-5ba3-436a-8726-bad06ccb7101)
)
(fp_poly (pts (xy -5 -6)
(xy -4 -6)
(xy -4 -5)
(xy -5 -5)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp f74a90d6-17d0-4d94-83dd-fa506c379c35)
)
(fp_poly (pts (xy -3 -6)
(xy -2 -6)
(xy -2 -5.1)
(xy -3 -5.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 4d14bb37-b2d8-4935-94ef-901c00738830)
)
(fp_poly (pts (xy -2 -6)
(xy -1 -6)
(xy -1 -5.1)
(xy -2 -5.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 4574a038-f5e9-4e7a-99c3-d559038b7a49)
)
(fp_poly (pts (xy 0 -6)
(xy 1 -6)
(xy 1 -5)
(xy 0 -5)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 3709d54c-913d-4049-a0a8-5ed81711b4a0)
)
(fp_poly (pts (xy 0 -6)
(xy 1 -6)
(xy 1 -5)
(xy 0 -5)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp b229b08b-8a5d-4cdb-b949-b72366c39dc9)
)
(fp_poly (pts (xy 1.1 -6)
(xy 2 -6)
(xy 2 -5)
(xy 1.1 -5)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp f55b84ea-2c84-41d8-b5bf-40bfdab5182c)
)
(fp_poly (pts (xy 3 -6)
(xy 3.9 -6)
(xy 3.9 -5)
(xy 3 -5)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 482a7c12-99a1-451f-89be-ec1fb9941d41)
)
(fp_poly (pts (xy 4 -6)
(xy 5 -6)
(xy 5 -5)
(xy 4 -5)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp fea3f26f-11c8-4e50-85b6-9268ae836a0e)
)
(fp_poly (pts (xy 4 -6)
(xy 5 -6)
(xy 5 -5)
(xy 4 -5)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 3efbc0cc-c11a-4cdc-b792-fd68cb807371)
)
(fp_poly (pts (xy -6 -4.9)
(xy -5 -4.9)
(xy -5 -4)
(xy -6 -4)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp f8bc5631-82aa-431c-8485-609c30f4200a)
)
(fp_poly (pts (xy -5 -4.9)
(xy -4 -4.9)
(xy -4 -4)
(xy -5 -4)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp cacb60e7-0753-4798-8081-d7ce873fbdb6)
)
(fp_poly (pts (xy -3 -5)
(xy -2 -5)
(xy -2 -4)
(xy -3 -4)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 3917046f-0dd4-4491-bc8e-77111ac12497)
)
(fp_poly (pts (xy -3 -5)
(xy -2 -5)
(xy -2 -4)
(xy -3 -4)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 4ca52df6-0a91-4a16-b03d-c5289a4bfce1)
)
(fp_poly (pts (xy -2 -5)
(xy -1 -5)
(xy -1 -4)
(xy -2 -4)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp da2ff761-c5b0-405d-99b1-b738a329aeca)
)
(fp_poly (pts (xy -2 -5)
(xy -1 -5)
(xy -1 -4)
(xy -2 -4)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 5e7ca18b-d5a4-4cd6-89fb-3fdd4246c140)
)
(fp_poly (pts (xy 0 -5)
(xy 1 -5)
(xy 1 -4)
(xy 0 -4)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp dc1ddd13-30a6-48f9-8aa4-bdf9ddcfb714)
)
(fp_poly (pts (xy 0 -5)
(xy 1 -5)
(xy 1 -4)
(xy 0 -4)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp fb80ba53-edf3-4ac7-a6ef-8cf96f9fb9ab)
)
(fp_poly (pts (xy 1.1 -5)
(xy 2 -5)
(xy 2 -4)
(xy 1.1 -4)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 56aa9ce5-5268-4442-9a44-1aaedd5468a4)
)
(fp_poly (pts (xy 3 -5)
(xy 3.9 -5)
(xy 3.9 -4)
(xy 3 -4)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 0ad272eb-d0df-4b19-b6bd-1e06ff3e49c8)
)
(fp_poly (pts (xy 4 -5)
(xy 5 -5)
(xy 5 -4)
(xy 4 -4)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 56cd2cd5-bb39-49f7-82b4-01fec8a8cc30)
)
(fp_poly (pts (xy 4 -5)
(xy 5 -5)
(xy 5 -4)
(xy 4 -4)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 1a765f72-1153-489a-8bdf-267ccb79fb78)
)
(fp_poly (pts (xy -6 -3)
(xy -5 -3)
(xy -5 -2)
(xy -6 -2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 7bf0fa7a-b2f8-4a85-b0f2-f79e23e0790a)
)
(fp_poly (pts (xy -6 -3)
(xy -5 -3)
(xy -5 -2)
(xy -6 -2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 00229bed-f4d6-4d59-8c62-11c71f00c5c8)
)
(fp_poly (pts (xy -4.9 -3)
(xy -4 -3)
(xy -4 -2)
(xy -4.9 -2)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp b8e8cf6f-2341-4169-aead-010588171a52)
)
(fp_poly (pts (xy -3 -3)
(xy -2.1 -3)
(xy -2.1 -2)
(xy -3 -2)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 03301e23-4a4b-4355-a252-d293794adfbc)
)
(fp_poly (pts (xy -2 -3)
(xy -1 -3)
(xy -1 -2)
(xy -2 -2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 1d970a54-1fed-4601-87e8-9b5908091f9c)
)
(fp_poly (pts (xy -2 -3)
(xy -1 -3)
(xy -1 -2)
(xy -2 -2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 2621f9ce-a325-4b6a-a131-00164bdad811)
)
(fp_poly (pts (xy 0 -3)
(xy 1 -3)
(xy 1 -2.1)
(xy 0.9 -2.1)
(xy 0.9 -2)
(xy 0 -2)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 1217d85e-d2b8-4780-aaf2-2aae62127ccd)
)
(fp_poly (pts (xy 1 -3)
(xy 2 -3)
(xy 2 -2.1)
(xy 1 -2.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 77d3887c-1f57-4128-8771-811bf5684de5)
)
(fp_poly (pts (xy 3 -3)
(xy 4 -3)
(xy 4 -2.1)
(xy 3 -2.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 4ea89a1c-d097-43a7-b331-c5d6d1da3082)
)
(fp_poly (pts (xy 4 -3)
(xy 5 -3)
(xy 5 -2)
(xy 4.1 -2)
(xy 4.1 -2.1)
(xy 4 -2.1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp ad095262-f472-4214-8a40-76a643bfb12f)
)
(fp_poly (pts (xy -6 -1.9)
(xy -5 -1.9)
(xy -5 -1)
(xy -6 -1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp f147514c-f2c3-43d0-ac00-7645ac8da4d8)
)
(fp_poly (pts (xy -5 -1.9)
(xy -4.9 -1.9)
(xy -4.9 -2)
(xy -4 -2)
(xy -4 -1)
(xy -5 -1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 6a4f16a8-cb40-40d6-81fe-6121def8da3a)
)
(fp_poly (pts (xy -3 -2)
(xy -2.1 -2)
(xy -2.1 -1.9)
(xy -2 -1.9)
(xy -2 -1)
(xy -3 -1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 650b4418-057d-43a5-9c6f-58382ba77824)
)
(fp_poly (pts (xy -2 -1.9)
(xy -1 -1.9)
(xy -1 -1)
(xy -2 -1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp fafc65f7-fd01-4d8d-9540-b98c1aa25b45)
)
(fp_poly (pts (xy 0 -2)
(xy 0.9 -2)
(xy 0.9 -1)
(xy 0 -1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp b17308d8-a049-4461-9e1d-704c0c1267a9)
)
(fp_poly (pts (xy 1 -2)
(xy 2 -2)
(xy 2 -1)
(xy 1 -1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 29a83cfb-c324-4a5a-8228-6061da9f701d)
)
(fp_poly (pts (xy 1 -2)
(xy 2 -2)
(xy 2 -1)
(xy 1 -1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 700f2a28-7a64-47d4-9fd7-975c06adea9f)
)
(fp_poly (pts (xy 3 -2)
(xy 4 -2)
(xy 4 -1)
(xy 3 -1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 16315029-caaa-4f70-8ea1-050dcf85f546)
)
(fp_poly (pts (xy 3 -2)
(xy 4 -2)
(xy 4 -1)
(xy 3 -1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp a8f9d7f4-9ec1-4645-9c15-f8d8c3ab6cc9)
)
(fp_poly (pts (xy 4.1 -2)
(xy 5 -2)
(xy 5 -1)
(xy 4.1 -1)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp c971750c-bd84-4bad-961c-13037a17829d)
)
(fp_poly (pts (xy -6 0)
(xy -5.1 0)
(xy -5.1 0.9)
(xy -6 0.9)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 60013054-c669-49ff-882b-8af884f12938)
)
(fp_poly (pts (xy -5 0)
(xy -4 0)
(xy -4 1)
(xy -5 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 66b694e9-da53-4aa2-9a72-b3d133098944)
)
(fp_poly (pts (xy -5 0)
(xy -4 0)
(xy -4 1)
(xy -5 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 74804f71-6cf8-45fd-ab68-30d60fe51ad3)
)
(fp_poly (pts (xy -3 0)
(xy -2 0)
(xy -2 1)
(xy -3 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 7d6aa1ed-4b84-4862-a274-6444057f60b6)
)
(fp_poly (pts (xy -3 0)
(xy -2 0)
(xy -2 1)
(xy -3 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp b1b0c335-42b2-4ea2-b94a-3ab33f78ea50)
)
(fp_poly (pts (xy -1.9 0)
(xy -1 0)
(xy -1 0.9)
(xy -1.9 0.9)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 64dfe626-e903-4856-a08c-2fb9032795a1)
)
(fp_poly (pts (xy 0 0)
(xy 1 0)
(xy 1 1)
(xy 0 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 236a84f6-59b8-406f-8f6c-a23f92b371e7)
)
(fp_poly (pts (xy 0 0)
(xy 1 0)
(xy 1 1)
(xy 0 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp afd94416-ec0f-41fa-80e5-92652f0dfd34)
)
(fp_poly (pts (xy 1 0)
(xy 2 0)
(xy 2 1)
(xy 1 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 42829724-f326-4456-9d0b-cab675f0c6ed)
)
(fp_poly (pts (xy 1 0)
(xy 2 0)
(xy 2 1)
(xy 1 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 840906cf-7b74-476f-a09b-877e27c97921)
)
(fp_poly (pts (xy 3 0)
(xy 4 0)
(xy 4 1)
(xy 3 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 4c1ef20a-36be-4604-be39-35f395648334)
)
(fp_poly (pts (xy 3 0)
(xy 4 0)
(xy 4 1)
(xy 3 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 2f2084c9-77d1-4911-b13c-f2f1b0a6e018)
)
(fp_poly (pts (xy 4 0)
(xy 5 0)
(xy 5 1)
(xy 4 1)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp ac51d6ef-b7b3-46a5-8789-89162b113739)
)
(fp_poly (pts (xy 4 0)
(xy 5 0)
(xy 5 1)
(xy 4 1)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 22f361a2-0d1f-4185-8b87-1db752f5fbda)
)
(fp_poly (pts (xy -6 1)
(xy -5 1)
(xy -5 2)
(xy -6 2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 98dbab72-1ede-456a-896f-30298a094e36)
)
(fp_poly (pts (xy -6 1)
(xy -5 1)
(xy -5 2)
(xy -6 2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 5ebd1a71-b818-4f8b-937b-9e28f415d750)
)
(fp_poly (pts (xy -5 1)
(xy -4 1)
(xy -4 2)
(xy -5 2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 254c376f-c9bc-49c9-8d86-57cea3750ad7)
)
(fp_poly (pts (xy -5 1)
(xy -4 1)
(xy -4 2)
(xy -5 2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 9ab6ca36-f944-42f8-86da-f5ddaaab9f1d)
)
(fp_poly (pts (xy -3 1)
(xy -2 1)
(xy -2 2)
(xy -3 2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 58ba9f25-2000-46ba-bcde-5fcd0563ad78)
)
(fp_poly (pts (xy -3 1)
(xy -2 1)
(xy -2 2)
(xy -3 2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp f5f757a2-75d8-4eb6-b808-bfdbda7603e6)
)
(fp_poly (pts (xy -2 1)
(xy -1 1)
(xy -1 2)
(xy -2 2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 5b529f77-960e-49c2-a878-47d6403dfb69)
)
(fp_poly (pts (xy -2 1)
(xy -1 1)
(xy -1 2)
(xy -2 2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 89d184d0-9ad7-4bf5-b212-80cb5ca7b7c3)
)
(fp_poly (pts (xy 0 1)
(xy 1 1)
(xy 1 2)
(xy 0 2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 0359c76a-d15b-46af-b410-997a8a7059cb)
)
(fp_poly (pts (xy 0 1)
(xy 1 1)
(xy 1 2)
(xy 0 2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 48549174-d152-4429-87ee-ebb626ded1d1)
)
(fp_poly (pts (xy 1.1 1.1)
(xy 2 1.1)
(xy 2 2)
(xy 1.1 2)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 0215b16d-2f4f-4403-b881-9b7251aaa416)
)
(fp_poly (pts (xy 3 1.1)
(xy 3.9 1.1)
(xy 3.9 2)
(xy 3 2)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp ce46f77e-696e-4c50-8bd2-1e9a5115b257)
)
(fp_poly (pts (xy 4 1)
(xy 5 1)
(xy 5 2)
(xy 4 2)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp d73432c1-d37a-4229-bb3e-ea611d113699)
)
(fp_poly (pts (xy 4 1)
(xy 5 1)
(xy 5 2)
(xy 4 2)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 07252f7c-e4fd-40df-b205-7f2978b68ace)
)
(fp_poly (pts (xy -6 3)
(xy -5 3)
(xy -5 3.9)
(xy -5.1 3.9)
(xy -5.1 4)
(xy -6 4)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 5c35b2f4-062f-4277-aa20-c6832842d588)
)
(fp_poly (pts (xy -2 3)
(xy -1 3)
(xy -1 4)
(xy -1.9 4)
(xy -1.9 3.9)
(xy -2 3.9)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 2e9d1997-68f3-4b6d-988f-e0cbb4068019)
)
(fp_poly (pts (xy 0 3)
(xy 1 3)
(xy 1 4)
(xy 0 4)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 2f9c47dc-28e9-4996-971a-b06f92eead6a)
)
(fp_poly (pts (xy 0 3)
(xy 1 3)
(xy 1 4)
(xy 0 4)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 6a2ada04-1c03-4fce-bfd3-deeaeea87c44)
)
(fp_poly (pts (xy 4 3)
(xy 5 3)
(xy 5 4)
(xy 4 4)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 4f96d929-26ea-4890-b641-81451c8f3741)
)
(fp_poly (pts (xy 4 3)
(xy 5 3)
(xy 5 4)
(xy 4 4)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 1030d35a-f10f-40f9-b57e-ac3f5d565502)
)
(fp_poly (pts (xy -5 4)
(xy -4 4)
(xy -4 5)
(xy -5 5)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp 9bb55264-d266-46cf-967a-88747fc74b9e)
)
(fp_poly (pts (xy -5 4)
(xy -4 4)
(xy -4 5)
(xy -5 5)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 37f94388-833e-48c8-8e6e-d1061fffd265)
)
(fp_poly (pts (xy -3 4)
(xy -2 4)
(xy -2 5)
(xy -3 5)
)
(layer F.Cu)
(width 0)
(fill solid)
(tstamp bf2476a1-09b7-41f2-b6b9-10708beca0bc)
)
(fp_poly (pts (xy -3 4)
(xy -2 4)
(xy -2 5)
(xy -3 5)
)
(layer F.Mask)
(width 0)
(fill solid)
(tstamp 6af9ff98-1cf2-4b61-9a66-24994e424227)
)
(fp_poly (pts (xy 1 4.1)
(xy 1.1 4.1)
(xy 1.1 4)
(xy 2 4)
(xy 2 5)
(xy 1 5)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 380072c2-d010-4f4a-b918-b5d059e957c9)
)
(fp_poly (pts (xy 3 4)
(xy 3.9 4)
(xy 3.9 4.1)
(xy 4 4.1)
(xy 4 5)
(xy 3 5)
)
(layer F.SilkS)
(width 0)
(fill solid)
(tstamp 942ea56b-e553-486c-b38c-fb568aa5c445)
)
)

